[project]
name = "infinitepay"
version = "0.1.0"
description = "InfinitePay checkout integration (API + CLI)"
requires-python = ">=3.11,<3.15"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "typer>=0.12",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "email-validator>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[project.scripts]
ipay = "infinitepay.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["infinitepay*"]
